--- a/index.html
+++ b/index.html
@@ -1,10 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <title>Rusume</title>
     <meta charset="UTF-8">
-    <title>Maksym Hrybun</title>
+    <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
-<body>
-    <h1>Resume</h1>
+<body style="background-color: #000000;">
+<div class="container">
+    <div class="row title">
+        <div class="col">
+            <div class="polaroid">
+                <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230" />
+            </div>
+        </div>
+        <div class="col titleText">
+            <h1>Hrybun Maksym</h1>
+            <h5>Python and React Native Developer</h5>
+        </div>
+    </div>
+    <div class="row me">
+        <div class="col">
+            <h4>ABOUT ME</h4>
+            <p>I am both Web Developer, Mobile App Developer and QA Tester. Working 100% on freelance. I able to learn new technologies and challenging concepts quickly and implement them. I’m eager to work with full dedication and looking forward to every opportunity to make a project better.I have experience developing web apps using Django framework, mobile application use technologies such as React Native and also testing web/mobile apps and games via Appium/Selenium (coding in Python). I am a benevolent, professional, service oriented person and I carry out all the work I am entrusted with caution and dedication.</p>
+        </div>
+    </div>
+    <div class="progress border" style="height:2px">
+        <div class="progress-bar bg-white" style="width:100%"></div>
+    </div>
+    <div class="row me">
+        <div class="col-md-6">
+            <h4>EDUCATION</h4>
+            <samp><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://admission.lnu.edu.ua/">National University named after Ivan Franko</a></samp>
+            <p class="paddingTop"><samp><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://ami.lnu.edu.ua/en/">Faculty of Applied Mathematics and Informatics</a></samp></p>
+            <p>2016 - Present</p>
+        </div>
+        <div class="col-sm">
+            <h4>Hobby</h4>
+            <samp>Basketball</samp>
+            <p class="paddingTop"><samp>Travel</samp></p>
+            <p><samp>AI</samp></p>
+        </div>
+        <div class="col">
+            <h4 style="margin-left: 15px;">CONTACT</h4>
+            <ul>
+                <li style="list-style-type: none;">
+                    <img src="./img/phone-28-24.png">
+                    <em style="margin-left: 5px;">+ 380 96 521 1764</em>
+                </li>
+                <li style="list-style-type: none; margin-top: 12px;">
+                    <img src="./img/message-outline-24.png">
+                    <em style="margin-left: 10px;">maksgribun@gmail.com</em>
+                </li>
+                <li style="list-style-type: none; margin-top: 12px;">
+                    <img src="./img/skype-24.png">
+                    <em style="margin-left: 10px;">maksgribun</em>
+                </li>
+                <li style="list-style-type: none; margin-top: 12px;">
+                    <img src="./img/worldwide-location-24.png">
+                    <em style="margin-left: 10px;">Ukraine, Lviv</em>
+                </li>
+                <li style="list-style-type: none; margin-top: 12px;">
+                    <img src="./img/linkedin-3-24.png">
+                    <em style="margin-left: 10px;"><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="https://www.linkedin.com/in/hrybun/"> My Profile</a></em>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="progress border" style="height:2px; margin-top: 20px;">
+        <div class="progress-bar bg-white" style="width:100%"></div>
+    </div>
+    <div class="row me container1">
+        <div class="col">
+            <h4>EXPERIENCE</h4>
+            <samp>Full-stack Developer(Python, JS)</samp>
+            <div id="carouselExampleSlidesOnly" class="carousel slide paddingTop" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="./img/1.jpeg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/c2.jpeg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/3.jpeg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/4.jpeg" alt="Third slide">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div>
+                <samp style="margin-left: 200px;">Oct 2018 - Jan 2019</samp>
+                <p style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
+                <p style="margin-left: 200px;"><samp>Freelance</samp></p>
+                <p style="margin-left: 200px;"><samp>Description :</samp></p>
+                <ul style="margin-left: 217px;">
+                    <li>Creating CRM Co-working System </li>
+                    <li style="margin-top: 10px;">Timer for each type of card </li>
+                    <li style="margin-top: 10px;">Reports </li>
+                    <li style="margin-top: 10px;">Data storage of services and prices for them</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row me">
+        <div class="col">
+            <samp>QA Appium Training</samp>
+            <div class="embed-responsive embed-responsive-16by9 paddingTop">
+                <!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/L5aITaHdS1A" allowfullscreen></iframe> -->
+                <!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/A6XUVjK9W4o" frameborder="0" allowfullscreen></iframe> -->
+                <iframe src="https://www.youtube.com/embed/L5aITaHdS1A" width="560" height="315" frameborder="0"></iframe>
+            </div>
+        </div>
+        <div class="col">
+            <samp style="margin-left: 200px;">Jan 2019 - Feb 2019</samp>
+            <p style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
+            <p style="margin-left: 200px;"><samp>DynamicBox Studio</samp></p>
+            <p style="margin-left: 200px;"><samp>Description :</samp></p>
+            <p style="margin-left: 200px;"><samp>I wrote automated tests for mobile games being developed by the company. They were coded in Python and run using Appium, to run them on actual devices.</samp></p>
+        </div>
+    </div>
+    <div class="row me">
+        <div class="col">
+            <samp>Full-stack Developer(Python, React Native)</samp>
+            <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="./img/work_in_progress.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/work_in_progress.jpg" alt="Second slide">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <samp style="margin-left: 206px;">May 2019 - Present</samp>
+            <p style="margin-top: 15px; margin-left: 206px"><samp>Lviv, Ukraine</samp></p>
+            <p style="margin-left: 206px;"><samp>DynamicBox Studio</samp></p>
+            <p style="margin-left: 206px;"><samp>Description :</samp></p>
+            <ul style="margin-left: 223px;">
+                <li style="margin-top: 10px;">Python 3.7 </li>
+                <li style="margin-top: 10px;">Flask API server</li>
+                <li style="margin-top: 10px;">MySql 5.7</li>
+                <li style="margin-top: 10px;">React Native</li>
+                <li style="margin-top: 10px;">Navigation</li>
+                <li style="margin-top: 10px;">Redux-Offline</li>
+                <li style="margin-top: 10px;">Redux-Thunk</li>
+                <li style="margin-top: 10px;">Redux-Logger</li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
