add horizontal lines

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Rusume</title>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <div class="row title">
         <div class="col">
             <div class="polaroid">
-                <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230" />
+                <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230"  alt="avatar"/>
             </div>
         </div>
         <div class="col titleText">
@@ -48,23 +48,23 @@
             <h4 style="margin-left: 15px;">CONTACT</h4>
             <ul>
                 <li style="list-style-type: none;">
-                    <img src="./img/phone-28-24.png">
+                    <img src="./img/phone-28-24.png" alt="">
                     <em style="margin-left: 5px;">+ 380 96 521 1764</em>
                 </li>
                 <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/message-outline-24.png">
+                    <img src="./img/message-outline-24.png" alt="">
                     <em style="margin-left: 10px;">maksgribun@gmail.com</em>
                 </li>
                 <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/skype-24.png">
+                    <img src="./img/skype-24.png" alt="">
                     <em style="margin-left: 10px;">maksgribun</em>
                 </li>
                 <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/worldwide-location-24.png">
+                    <img src="./img/worldwide-location-24.png" alt="">
                     <em style="margin-left: 10px;">Ukraine, Lviv</em>
                 </li>
                 <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/linkedin-3-24.png">
+                    <img src="./img/linkedin-3-24.png" alt="">
                     <em style="margin-left: 10px;"><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="https://www.linkedin.com/in/hrybun/"> My Profile</a></em>
                 </li>
             </ul>
@@ -109,13 +109,14 @@
             </div>
         </div>
     </div>
+    <div class="progress border" style="height:2px; margin-top: 50px;">
+        <div class="progress-bar bg-white" style="width:100%"></div>
+    </div>
     <div class="row me">
         <div class="col">
             <samp>QA Appium Training</samp>
             <div class="embed-responsive embed-responsive-16by9 paddingTop">
-                <!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/L5aITaHdS1A" allowfullscreen></iframe> -->
-                <!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/A6XUVjK9W4o" frameborder="0" allowfullscreen></iframe> -->
-                <iframe src="https://www.youtube.com/embed/L5aITaHdS1A" width="560" height="315" frameborder="0"></iframe>
+                <iframe src="https://www.youtube.com/embed/L5aITaHdS1A" width="560" height="315"></iframe>
             </div>
         </div>
         <div class="col">
@@ -125,6 +126,9 @@
             <p style="margin-left: 200px;"><samp>Description :</samp></p>
             <p style="margin-left: 200px;"><samp>I wrote automated tests for mobile games being developed by the company. They were coded in Python and run using Appium, to run them on actual devices.</samp></p>
         </div>
+    </div>
+    <div class="progress border" style="height:2px; margin-top: 50px;">
+        <div class="progress-bar bg-white" style="width:100%"></div>
     </div>
     <div class="row me">
         <div class="col">
@@ -147,13 +151,10 @@
             <p style="margin-left: 206px;"><samp>Description :</samp></p>
             <ul style="margin-left: 223px;">
                 <li style="margin-top: 10px;">Python 3.7 </li>
-                <li style="margin-top: 10px;">Flask API server</li>
+                <li style="margin-top: 10px;">Flask API Server</li>
                 <li style="margin-top: 10px;">MySql 5.7</li>
                 <li style="margin-top: 10px;">React Native</li>
-                <li style="margin-top: 10px;">Navigation</li>
                 <li style="margin-top: 10px;">Redux-Offline</li>
-                <li style="margin-top: 10px;">Redux-Thunk</li>
-                <li style="margin-top: 10px;">Redux-Logger</li>
             </ul>
         </div>
     </div>
