--- a/index.html
+++ b/index.html
@@ -130,10 +130,13 @@
             <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="./img/work_in_progress.jpg" alt="First slide">
+                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.16.jpeg" alt="Screen One">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/work_in_progress.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Two">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Three">
                     </div>
                 </div>
             </div>
