--- a/index.html
+++ b/index.html
@@ -10,151 +10,181 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #000000;">
-<div class="container">
-    <div class="row title">
-        <div class="col">
-            <div class="polaroid">
-                <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230"  alt="avatar"/>
+    <div class="container">
+        <div class="row title">
+            <div class="col">
+                <div class="polaroid">
+                    <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230"  alt="avatar"/>
+                </div>
+            </div>
+            <div class="col titleText">
+                <h1>Hrybun Maksym</h1>
+                <h5>Python and React Native Developer</h5>
             </div>
         </div>
-        <div class="col titleText">
-            <h1>Hrybun Maksym</h1>
-            <h5>Python and React Native Developer</h5>
+        <div class="row me">
+            <div class="col">
+                <h3 style="margin-bottom: 20px;">ABOUT ME</h3>
+                <p class="lead">I am both Web Developer, Mobile App Developer and QA Tester. Working 100% on freelance. I able to learn new technologies and challenging concepts quickly and implement them. I’m eager to work with full dedication and looking forward to every opportunity to make a project better.I have experience developing web apps using Django framework, mobile application use technologies such as React Native and also testing web/mobile apps and games via Appium/Selenium (coding in Python). I am a benevolent, professional, service oriented person and I carry out all the work I am entrusted with caution and dedication.</p>
+            </div>
         </div>
-    </div>
-    <div class="row me">
-        <div class="col">
-            <h3 style="margin-bottom: 20px;">ABOUT ME</h3>
-            <p class="lead">I am both Web Developer, Mobile App Developer and QA Tester. Working 100% on freelance. I able to learn new technologies and challenging concepts quickly and implement them. I’m eager to work with full dedication and looking forward to every opportunity to make a project better.I have experience developing web apps using Django framework, mobile application use technologies such as React Native and also testing web/mobile apps and games via Appium/Selenium (coding in Python). I am a benevolent, professional, service oriented person and I carry out all the work I am entrusted with caution and dedication.</p>
+        <div class="progress border" style="height:2px">
+            <div class="progress-bar bg-white" style="width:100%"></div>
         </div>
-    </div>
-    <div class="progress border" style="height:2px">
-        <div class="progress-bar bg-white" style="width:100%"></div>
-    </div>
-    <div class="row me">
-        <div class="col-md-8">
-            <h3 style="margin-bottom: 20px;">EDUCATION</h3>
-            <samp><a class="lead" style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://admission.lnu.edu.ua/">National University named after Ivan Franko</a></samp>
-            <p class="lead paddingTop"><samp><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://ami.lnu.edu.ua/en/">Faculty of Applied Mathematics and Informatics</a></samp></p>
-            <p class="lead">2016 - Present</p>
+        <div class="row me">
+            <div class="col-md-8">
+                <h3 style="margin-bottom: 20px;">EDUCATION</h3>
+                <samp><a class="lead" style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://admission.lnu.edu.ua/">National University named after Ivan Franko</a></samp>
+                <p class="lead paddingTop"><samp><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="http://ami.lnu.edu.ua/en/">Faculty of Applied Mathematics and Informatics</a></samp></p>
+                <p class="lead">2016 - Present</p>
+            </div>
+            <div class="col">
+                <h3 style="margin-left: 15px; margin-bottom: 20px;">CONTACT</h3>
+                <ul>
+                    <li style="list-style-type: none;">
+                        <img src="./img/phone-28-24.png" alt="">
+                        <em class="lead" style="margin-left: 5px;">+ 380 96 521 1764</em>
+                    </li>
+                    <li style="list-style-type: none; margin-top: 12px;">
+                        <img src="./img/message-outline-24.png" alt="">
+                        <em class="lead" style="margin-left: 10px;">maksgribun@gmail.com</em>
+                    </li>
+                    <li style="list-style-type: none; margin-top: 12px;">
+                        <img src="./img/skype-24.png" alt="">
+                        <em class="lead" style="margin-left: 10px;">maksgribun</em>
+                    </li>
+                    <li style="list-style-type: none; margin-top: 12px;">
+                        <img src="./img/worldwide-location-24.png" alt="">
+                        <em class="lead" style="margin-left: 10px;">Ukraine, Lviv</em>
+                    </li>
+                    <li style="list-style-type: none; margin-top: 12px;">
+                        <img src="./img/linkedin-3-24.png" alt="">
+                        <em class="lead" style="margin-left: 10px;"><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="https://www.linkedin.com/in/hrybun/"> My Profile</a></em>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col">
-            <h3 style="margin-left: 15px; margin-bottom: 20px;">CONTACT</h3>
-            <ul>
-                <li style="list-style-type: none;">
-                    <img src="./img/phone-28-24.png" alt="">
-                    <em class="lead" style="margin-left: 5px;">+ 380 96 521 1764</em>
-                </li>
-                <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/message-outline-24.png" alt="">
-                    <em class="lead" style="margin-left: 10px;">maksgribun@gmail.com</em>
-                </li>
-                <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/skype-24.png" alt="">
-                    <em class="lead" style="margin-left: 10px;">maksgribun</em>
-                </li>
-                <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/worldwide-location-24.png" alt="">
-                    <em class="lead" style="margin-left: 10px;">Ukraine, Lviv</em>
-                </li>
-                <li style="list-style-type: none; margin-top: 12px;">
-                    <img src="./img/linkedin-3-24.png" alt="">
-                    <em class="lead" style="margin-left: 10px;"><a style="text-decoration: none; color: hsl(0, 100%, 100%);" href="https://www.linkedin.com/in/hrybun/"> My Profile</a></em>
-                </li>
-            </ul>
+        <div class="progress border" style="height:2px; margin-top: 20px;">
+            <div class="progress-bar bg-white" style="width:100%"></div>
         </div>
-    </div>
-    <div class="progress border" style="height:2px; margin-top: 20px;">
-        <div class="progress-bar bg-white" style="width:100%"></div>
-    </div>
-    <div class="row me container1">
-        <div class="col">
-            <h2>EXPERIENCE</h2>
-            <samp class="lead">Full-stack Developer(Python, JS)</samp>
-            <div id="carouselExampleSlidesOnly" class="carousel slide paddingTop" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./img/1.jpeg" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/c2.jpeg" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/3.jpeg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/4.jpeg" alt="Third slide">
+        <div class="row me container1">
+            <div class="col">
+                <h2>EXPERIENCE</h2>
+                <samp class="lead">Full-stack Developer(Python, JS)</samp>
+                <div id="carouselExampleSlidesOnly" class="carousel slide paddingTop" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./img/1.jpeg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/c2.jpeg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/3.jpeg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/4.jpeg" alt="Third slide">
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <div>
+                    <samp class="lead" style="margin-left: 200px;">Oct 2018 - Jan 2019</samp>
+                    <p class="lead" style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
+                    <p class="lead" style="margin-left: 200px;"><samp>Freelance</samp></p>
+                    <p class="lead" style="margin-left: 200px;"><samp>Description :</samp></p>
+                    <ul style="margin-left: 217px;">
+                        <li class="lead">Creating CRM Co-working System </li>
+                        <li class="lead" style="margin-top: 10px;">Timer for each type of card </li>
+                        <li class="lead" style="margin-top: 10px;">Reports </li>
+                        <li class="lead" style="margin-top: 10px;">Data storage of services and prices for them</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col">
-            <div>
-                <samp class="lead" style="margin-left: 200px;">Oct 2018 - Jan 2019</samp>
+        <div class="progress border" style="height:2px; margin-top: 50px;">
+            <div class="progress-bar bg-white" style="width:100%"></div>
+        </div>
+        <div class="row me">
+            <div class="col">
+                <samp class="lead">QA Appium Training</samp>
+                <div class="embed-responsive embed-responsive-16by9 paddingTop">
+                    <iframe src="https://www.youtube.com/embed/L5aITaHdS1A" width="560" height="315"></iframe>
+                </div>
+            </div>
+            <div class="col">
+                <samp class="lead" style="margin-left: 200px;">Jan 2019 - Feb 2019</samp>
                 <p class="lead" style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
-                <p class="lead" style="margin-left: 200px;"><samp>Freelance</samp></p>
+                <p class="lead" style="margin-left: 200px;"><samp>DynamicBox Studio</samp></p>
                 <p class="lead" style="margin-left: 200px;"><samp>Description :</samp></p>
-                <ul style="margin-left: 217px;">
-                    <li class="lead">Creating CRM Co-working System </li>
-                    <li class="lead" style="margin-top: 10px;">Timer for each type of card </li>
-                    <li class="lead" style="margin-top: 10px;">Reports </li>
-                    <li class="lead" style="margin-top: 10px;">Data storage of services and prices for them</li>
+                <p class="lead" style="margin-left: 200px;"><samp>I wrote automated tests for mobile games being developed by the company. They were coded in Python and run using Appium, to run them on actual devices.</samp></p>
+            </div>
+        </div>
+        <div class="progress border" style="height:2px; margin-top: 50px;">
+            <div class="progress-bar bg-white" style="width:100%"></div>
+        </div>
+        <div class="row me">
+            <div class="col">
+                <samp class="lead">Full-stack Developer(Python, React Native)</samp>
+                <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.16.jpeg" alt="Screen One">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Two">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Three">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <samp class="lead" style="margin-left: 206px;">May 2019 - September 2019</samp>
+                <p class="lead" style="margin-top: 15px; margin-left: 206px"><samp>Lviv, Ukraine</samp></p>
+                <p class="lead" style="margin-left: 206px;"><samp>DynamicBox Studio</samp></p>
+                <p class="lead" style="margin-left: 206px;"><samp>Description :</samp></p>
+                <ul style="margin-left: 223px;">
+                    <li class="lead" style="margin-top: 10px;">Python 3.7 </li>
+                    <li class="lead" style="margin-top: 10px;">Flask API Server</li>
+                    <li class="lead" style="margin-top: 10px;">MySql 5.7</li>
+                    <li class="lead" style="margin-top: 10px;">React Native</li>
+                    <li class="lead" style="margin-top: 10px;">Redux-Offline</li>
+                </ul>
+            </div>
+        </div>
+        <div class="progress border" style="height:2px; margin-top: 50px;">
+            <div class="progress-bar bg-white" style="width:100%"></div>
+        </div>
+        <div class="row me">
+            <div class="col">
+                <samp class="lead">Python Developer</samp>
+                <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./img/enapps.png" alt="Screen One">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <samp class="lead" style="margin-left: 206px;">September 2019 - Present</samp>
+                <p class="lead" style="margin-top: 15px; margin-left: 206px"><samp>Lviv, Ukraine</samp></p>
+                <p class="lead" style="margin-left: 206px;"><samp>Enapps Ltd</samp></p>
+                <p class="lead" style="margin-left: 206px;"><samp>Description :</samp></p>
+                <p class="lead" style="margin-left: 200px;"><samp>Development unique Business Management Software Solution otherwise known as an ERP.</samp></p>
+                <ul style="margin-left: 223px;">
+                    <li class="lead" style="margin-top: 10px;">Odoo (customized to himself)</li>
+                    <li class="lead" style="margin-top: 10px;">PostgreSQL 9.6</li>
+                    <li class="lead" style="margin-top: 10px;">JS</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="progress border" style="height:2px; margin-top: 50px;">
-        <div class="progress-bar bg-white" style="width:100%"></div>
+    <div id="footer">
+        &copy; Hrybun Maksym
     </div>
-    <div class="row me">
-        <div class="col">
-            <samp class="lead">QA Appium Training</samp>
-            <div class="embed-responsive embed-responsive-16by9 paddingTop">
-                <iframe src="https://www.youtube.com/embed/L5aITaHdS1A" width="560" height="315"></iframe>
-            </div>
-        </div>
-        <div class="col">
-            <samp class="lead" style="margin-left: 200px;">Jan 2019 - Feb 2019</samp>
-            <p class="lead" style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
-            <p class="lead" style="margin-left: 200px;"><samp>DynamicBox Studio</samp></p>
-            <p class="lead" style="margin-left: 200px;"><samp>Description :</samp></p>
-            <p class="lead" style="margin-left: 200px;"><samp>I wrote automated tests for mobile games being developed by the company. They were coded in Python and run using Appium, to run them on actual devices.</samp></p>
-        </div>
-    </div>
-    <div class="progress border" style="height:2px; margin-top: 50px;">
-        <div class="progress-bar bg-white" style="width:100%"></div>
-    </div>
-    <div class="row me">
-        <div class="col">
-            <samp class="lead">Full-stack Developer(Python, React Native)</samp>
-            <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.16.jpeg" alt="Screen One">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Two">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/photo_2019-08-05 21.57.21.jpeg" alt="Screen Three">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <samp class="lead" style="margin-left: 206px;">May 2019 - Present</samp>
-            <p class="lead" style="margin-top: 15px; margin-left: 206px"><samp>Lviv, Ukraine</samp></p>
-            <p class="lead" style="margin-left: 206px;"><samp>DynamicBox Studio</samp></p>
-            <p class="lead" style="margin-left: 206px;"><samp>Description :</samp></p>
-            <ul style="margin-left: 223px;">
-                <li class="lead" style="margin-top: 10px;">Python 3.7 </li>
-                <li class="lead" style="margin-top: 10px;">Flask API Server</li>
-                <li class="lead" style="margin-top: 10px;">MySql 5.7</li>
-                <li class="lead" style="margin-top: 10px;">React Native</li>
-                <li class="lead" style="margin-top: 10px;">Redux-Offline</li>
-            </ul>
-        </div>
-    </div>
-</div>
 </body>
 </html>
