update cv, added N-Development

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #000000;">
-    <div class="container">
+    <div class="container" style="padding-bottom: 200px;">
         <div class="row title">
             <div class="col">
                 <div class="polaroid">
-                    <img src="./img/Screen Shot 2019-07-29 at 00.37.41.png"  width="250" height="230"  alt="avatar"/>
+                    <img src="./img/my_photo.JPG"  width="250" height="230"  alt="avatar"/>
                 </div>
             </div>
             <div class="col titleText">
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="col">
-                <samp class="lead" style="margin-left: 206px;">September 2019 - Present</samp>
+                <samp class="lead" style="margin-left: 206px;">Sep 2019 - Sep 2020</samp>
                 <p class="lead" style="margin-top: 15px; margin-left: 206px"><samp>Lviv, Ukraine</samp></p>
                 <p class="lead" style="margin-left: 206px;"><samp>Enapps Ltd</samp></p>
                 <p class="lead" style="margin-left: 206px;"><samp>Description :</samp></p>
@@ -178,6 +178,33 @@
                 <ul style="margin-left: 223px;">
                     <li class="lead" style="margin-top: 10px;">Odoo (customized to himself)</li>
                     <li class="lead" style="margin-top: 10px;">PostgreSQL 9.6</li>
+                    <li class="lead" style="margin-top: 10px;">JS</li>
+                </ul>
+            </div>
+        </div>
+        <div class="progress border" style="height:2px; margin-top: 50px;">
+            <div class="progress-bar bg-white" style="width:100%"></div>
+        </div>
+        <div class="row me">
+            <div class="col">
+                <samp class="lead">Python Developer</samp>
+                <div id="carouselExampleSlidesOnlyTwo" class="carousel slide paddingTop" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./img/n-dev.png" alt="Screen One">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <samp class="lead" style="margin-left: 200px;">Oct 2019 - Present</samp>
+                <p class="lead" style="margin-top: 15px; margin-left: 200px;"><samp>Lviv, Ukraine</samp></p>
+                <p class="lead" style="margin-left: 200px;"><samp>N-Development</samp></p>
+                <p class="lead" style="margin-left: 200px;"><samp>Description :</samp></p>
+                <p class="lead" style="margin-left: 200px;"><samp>Since our founding, we have supported small to middle companies with the introduction and implementation of ERP projects from our two locations in Ukraine.</samp></p>
+                <ul style="margin-left: 223px;">
+                    <li class="lead" style="margin-top: 10px;">Odoo 13, 14</li>
+                    <li class="lead" style="margin-top: 10px;">PostgreSQL 9.6, - 12</li>
                     <li class="lead" style="margin-top: 10px;">JS</li>
                 </ul>
             </div>
