--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <div class="row me">
             <div class="col">
                 <h3 style="margin-bottom: 20px;">ABOUT ME</h3>
-                <p class="lead">I am both Web Developer, Mobile App Developer and QA Tester. Working 100% on freelance. I able to learn new technologies and challenging concepts quickly and implement them. I’m eager to work with full dedication and looking forward to every opportunity to make a project better.I have experience developing web apps using Django framework, mobile application use technologies such as React Native and also testing web/mobile apps and games via Appium/Selenium (coding in Python). I am a benevolent, professional, service oriented person and I carry out all the work I am entrusted with caution and dedication.</p>
+                <p class="lead">I am both Web Developer, Mobile App Developer and QA Tester.
+                                I able to learn new technologies and challenging concepts quickly and implement them.
+                                I’m eager to work with full dedication and looking forward to every opportunity to make a project better.
+                                I have experience developing web apps using Django framework, Odoo 6, 13-14 versions,
+                                mobile application use technologies such as React Native and also testing web/mobile apps and games via Appium/Selenium (coding in Python).
+                                I am a benevolent, professional, service oriented person and I carry out all the work I am entrusted with caution and dedication.</p>
             </div>
         </div>
         <div class="progress border" style="height:2px">
